k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      containers:
      - name: frontend
        image: kirillshakhov/retreat-frontend:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "150m"
            memory: "300Mi"
          limits:
            cpu: "300m"
            memory: "600Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend
